--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <nav>
-      <div class="nav-box left">
-        <img src="#" alt="Logo">
-      </div>
-      <div class="nav-box right">
-        <i class="hamburger">Hamburger Icon</i>
-        <ul>
-          <li>About</li>
-          <li>Work</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-    </nav>
 
-    <div class="hero">
-      <div class="hero-text">
-      <h1>Web Design for the Modern Landscape</h1>
-      <p>scroll</p>
-      <i>Scroll Arrow</i>
-      </div>
-    </div>
+    <div class="top-image-container">
+      <nav>
+        <div class="nav-box left">
+          <img src="#" alt="Logo">
+        </div>
+        <div class="nav-box right">
+          <i class="hamburger">Hamburger Icon</i>
+          <ul>
+            <li>About</li>
+            <li>Work</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </nav>
 
+      <div class="hero">
+        <div class="hero-text">
+        <h1>Web Design for the Modern Landscape</h1>
+        <p>scroll</p>
+        <i>Scroll Arrow</i>
+        </div>
+      </div>
+  </div>
+  
     <div class="about">
       <div class="about-box">
         <i>Person Icon</i>
@@ -58,7 +61,7 @@
         </div>
         <div class="work-box">
           <a href="https://jbellwaite.github.io/google/">
-            <img src="google.png" alt="google">
+            <img src="img/google.png" alt="google">
             <h3>Google</h3>
           </a>
         </div>
