Add further styling, add more parallax images, add custom fonts and begin to change hover colors on links

--- a/index.html
+++ b/index.html
@@ -4,93 +4,90 @@
     <meta charset="utf-8">
     <title>Web Design by JBW</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://use.fontawesome.com/48beddc1ee.js"></script>
   </head>
   <body>
 
-    <div class="top-image-container">
-      <nav>
-        <div class="nav-box left">
-          <img src="#" alt="Logo">
+      <div class="top-image-container">
+        <nav>
+          <div class="nav-box left">
+            <!-- <img src="#" alt="Logo"> -->
+          </div>
+          <div class="nav-box right">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+            <ul>
+              <li>About</li>
+              <li>Work</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+        </nav>
+
+        <div class="hero">
+          <div class="hero-text">
+          <h1>Web Design for the Modern Landscape</h1>
+          <p>scroll</p>
+          <i class="fa fa-sort-desc" aria-hidden="true"></i>
+          </div>
         </div>
-        <div class="nav-box right">
-          <i class="hamburger">Hamburger Icon</i>
-          <ul>
-            <li>About</li>
-            <li>Work</li>
-            <li>Contact</li>
-          </ul>
-        </div>
-      </nav>
-
-      <div class="hero">
-        <div class="hero-text">
-        <h1>Web Design for the Modern Landscape</h1>
-        <p>scroll</p>
-        <i>Scroll Arrow</i>
-        </div>
-      </div>
-
-  </div>
-    <div class="about">
-      <div class="about-box">
-        <i>Person Icon</i>
-        <h2>About Me</h2>
-        <p>My name is Jessie Bell Waite. I'm a web designer, writer, and yoga teacher working in the Portland, Oregon area. I'm currently enrolled at <a href="https://www.epicodus.com/">Epicodus</a> in the CSS/Design track.</p>
-      </div>
-      <div class="about-box">
-        <i>Web Design Icon</i>
-        <h2>Web Design</h2>
-        <p>I can help create a beautiful and efficient web experience for you and your customers. Whether you need a new website for a personal project, or to update an existing business website, I can help. </p>
-      </div>
-    </div>
-
-    <div class="work">
-      <h2>Past Projects</h2>
-      <div class="work-container">
-        <a href="https://jbellwaite.github.io/tribute/">
-        <div class="work-box">
-            <img src="img/rumi.png" alt="Rumi">
-            <h3>Rumi</h3>
-        </div>
-      </a>
-      <a href="https://jbellwaite.github.io/plant-haus/">
-        <div class="work-box">
-            <img src="img/plant.png" alt="plant haus">
-            <h3>Plant Haus</h3>
-        </div>
-      </a>
-      <a href="https://jbellwaite.github.io/google/">
-        <div class="work-box">
-            <img src="img/google.png" alt="google">
-            <h3>Google</h3>
-        </div>
-      </a>
-      </div>
-    </div>
-
-    <div class="contact">
-      <h2>Let's Work Together</h2>
-      <div class="contact-box">
-        <h3>Contact</h3>
-        <p>phone: 503-798-1726</p>
-        <p>email: jess.bell@me.com</p>
-      </div>
-    </div>
-
-    <footer>
-      <div class="footer-box">
-
-      </div>
-      <div class="footer-box">
-
-      </div>
-      <div class="footer-box">
-
-      </div>
-
-    </footer>
 
     </div>
+      <div class="about">
+        <div class="about-box">
+          <i class="fa fa-grav" aria-hidden="true"></i>
+          <h2>About Me</h2>
+          <p>My name is Jessie Bell Waite. I'm a web designer, writer, and yoga teacher working in the Portland, Oregon area. I'm currently enrolled at<a href="https://www.epicodus.com/">Epicodus</a>in the CSS/Design track.</p>
+        </div>
+        <div class="about-box">
+          <i class="fa fa-laptop" aria-hidden="true"></i>
+          <h2>Web Design</h2>
+          <p>I can help create a beautiful and efficient web experience for you and your customers. Whether you need a new website for a personal project, or to update an existing business website, I can help. </p>
+        </div>
+      </div>
+
+      <div class="work">
+        <h2>Past Projects</h2>
+        <div class="work-container">
+          <a href="https://jbellwaite.github.io/tribute/">
+          <div class="work-box">
+              <img src="img/rumi.png" alt="Rumi">
+              <h3>Rumi</h3>
+          </div>
+        </a>
+        <a href="https://jbellwaite.github.io/plant-haus/">
+          <div class="work-box">
+              <img src="img/plant.png" alt="plant haus">
+              <h3>Plant Haus</h3>
+          </div>
+        </a>
+        <a href="https://jbellwaite.github.io/google/">
+          <div class="work-box">
+              <img src="img/google.png" alt="google">
+              <h3>Google</h3>
+          </div>
+        </a>
+        </div>
+      </div>
+
+      <div class="contact">
+        <h2>Let's Work Together</h2>
+        <div class="contact-box">
+          <h3>Contact</h3>
+          <p><i class="fa fa-mobile" aria-hidden="true"></i>
+            phone: 503-798-1726</p>
+          <p><i class="fa fa-envelope-o" aria-hidden="true"></i>
+            email: jess.bell@me.com</p>
+        </div>
+      </div>
+
+      <footer>
+        <div class="footer-box">
+        </div>
+        <div class="footer-box">
+        </div>
+        <div class="footer-box">
+        </div>
+      </footer>
 
   </body>
 </html>
