Continue to add styling, add hover effects, add transition, style icons

--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
 
       <div class="top-image-container">
         <nav>
-          <div class="nav-box left">
-            <!-- <img src="#" alt="Logo"> -->
-          </div>
-          <div class="nav-box right">
+          <div class="nav-box">
             <i class="fa fa-bars" aria-hidden="true"></i>
             <ul>
-              <li>About</li>
-              <li>Work</li>
-              <li>Contact</li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#work">Work</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
         </nav>
 
         <div class="hero">
+          <a href="#about">
+            <i class="fa fa-sort-desc" aria-hidden="true"></i>
+          </a>
           <div class="hero-text">
-          <h1>Web Design for the Modern Landscape</h1>
-          <p>scroll</p>
-          <i class="fa fa-sort-desc" aria-hidden="true"></i>
+            <h1>Web Design for the Modern Landscape</h1>
+            <p>scroll</p>
           </div>
         </div>
 
     </div>
-      <div class="about">
+      <div class="about" id="about">
         <div class="about-box">
           <i class="fa fa-grav" aria-hidden="true"></i>
           <h2>About Me</h2>
@@ -45,7 +44,7 @@
         </div>
       </div>
 
-      <div class="work">
+      <div class="work" id="work">
         <h2>Past Projects</h2>
         <div class="work-container">
           <a href="https://jbellwaite.github.io/tribute/">
@@ -69,7 +68,7 @@
         </div>
       </div>
 
-      <div class="contact">
+      <div class="contact" id="contact">
         <h2>Let's Work Together</h2>
         <div class="contact-box">
           <h3>Contact</h3>
